fix case senstive issue with Four Square demo link

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                     <li class = "four-square-list">Player 4: (movement) IJKL keys, (sprint) . key</li>
                                 </ul>
                             </div>
-                            <p class="project-video" id="four-square-video"><a href="FourSquare-0.7-demo/FourSquare 0.7 Copy.html">Click here to play a work-in-progress build (best in fullscreen)</a>
+                            <p class="project-video" id="four-square-video"><a href="Projects/FourSquare-0.7-demo/FourSquare 0.7 Copy.html" target="_blank">Click here to play a work-in-progress build (best in fullscreen)</a>
                                     <br><br>Or watch the video below!
                                     <br><br><iframe width="840" height="472" src="https://www.youtube.com/embed/ptIK_LHJacw?" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </p>
